Fixed top and bottom margin spacing for Stats table on admin side (Progress/Statistics).

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1410,7 +1410,7 @@ table.PTable{
     background: #2f393f;
     border: 1px solid #272e31;
     width: 935px;
-	margin: 0 0 30px 0;
+	margin: 0px;
 }
 
 #PHeadTable{
